--- a/UI/leaderboard.html
+++ b/UI/leaderboard.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Leaderboard - Guhuza</title>
-    <link rel="stylesheet" href="leaderboard.css"> <!-- Link to the CSS file -->
+    <link rel="stylesheet" href="style/leaderboard.css"> <!-- Link to the CSS file -->
 </head>
 <body>
     <!-- Header / Navigation Bar -->
