--- a/dashboard.html
+++ b/dashboard.html
@@ -11,7 +11,7 @@
     <!-- Header / Navigation Bar -->
   <header class="site-header">
     <div class="container">
-        <a href="https://guhuza.com" class="logo">
+        <a href="index.html" class="logo">
             <img src="https://guhuza.com/logo/logo_white_large.png" alt="Guhuza Logo">
         </a>
         <nav class="main-nav">
