add re-usable style to file

--- a/UI/level2.html
+++ b/UI/level2.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Guhuza Quiz Page</title>
+    <title>Career Quiz - Guhuza</title>
     <link rel="stylesheet" href="style/question.css"> <!-- Link to your CSS file -->
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/footer.css">
+    <link rel="stylesheet" href="style/header.css">
 </head>
 
 <body>
@@ -17,16 +20,12 @@
             </a>
             <nav class="main-nav">
                 <ul class="nav-links">
-                    <li><a href="https://guhuza.com/jobs">Find Jobs</a></li>
-                    <li><a href="https://guhuza.com/employers">Employers</a></li>
-                    <li><a href="https://guhuza.com/candidates">Candidates</a></li>
-                    <li><a href="https://guhuza.com/about-us">About Us</a></li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="play.html">Play</a></li>
+                    <li><a href="leaderboard.html">Leaderboard</a></li>
+                    <li><a href="profile.html">Profile</a></li>
                 </ul>
             </nav>
-            <div class="auth-buttons">
-                <a href="https://guhuza.com/signin" class="btn btn-signin">Sign In</a>
-                <a href="https://guhuza.com/signup" class="btn btn-signup">Sign Up</a>
-            </div>
         </div>
     </header>
 
