--- a/UI/profile.html
+++ b/UI/profile.html
@@ -6,18 +6,21 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Profile - Guhuza</title>
     <link rel="stylesheet" href="style/profile.css"> <!-- Link to the CSS file -->
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/footer.css">
+    <link rel="stylesheet" href="style/header.css">
 </head>
 
 <body>
     <!-- Header / Navigation Bar -->
     <header class="site-header">
         <div class="container">
-            <a href="dashboard.html" class="logo">
+            <a href="index.html" class="logo">
                 <img src="https://guhuza.com/logo/logo_white_large.png" alt="Guhuza Logo">
             </a>
             <nav class="main-nav">
                 <ul class="nav-links">
-                    <li><a href="dashboard.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="play.html">Play</a></li>
                     <li><a href="leaderboard.html">Leaderboard</a></li>
                     <li><a href="profile.html">Profile</a></li>
