--- a/UI/signin.html
+++ b/UI/signin.html
@@ -13,6 +13,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign In - Guhuza</title>
     <link rel="stylesheet" href="style/sign.css">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/footer.css">
+    <link rel="stylesheet" href="style/header.css">
     <script defer src="sign.js"></script> <!-- JavaScript for validation -->
 </head>
 <body>
@@ -45,7 +48,7 @@
                 <label for="password">Password:</label>
                 <input type="password" id="password" name="password" required placeholder="Enter your password" minlength="8" maxlength="10">
                 
-                <button type="submit" onclick="location.href='dashboard.html'">Sign In</button>
+                <button type="submit" onclick="location.href='index.html'">Sign In</button>
             </form>
 
             <p><a href="forgot-password.html">Forgot Password?</a></p> <!-- Forgot Password link -->
