--- a/UI/forgot-password.html
+++ b/UI/forgot-password.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Forgot Password - Guhuza</title>
     <link rel="stylesheet" href="style/sign.css">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/footer.css">
+    <link rel="stylesheet" href="style/header.css">
     <script defer src="sign.js"></script> <!-- JavaScript for validation -->
 </head>
 <body>
