--- a/UI/signup.html
+++ b/UI/signup.html
@@ -5,6 +5,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sign Up - Guhuza</title>
     <link rel="stylesheet" href="style/sign.css">
+    <link rel="stylesheet" href="style/style.css">
+    <link rel="stylesheet" href="style/footer.css">
+    <link rel="stylesheet" href="style/header.css">
     <script defer src="sign.js"></script> <!-- JavaScript for validation -->
 </head>
 <body>
@@ -39,7 +42,7 @@
                 <label for="confirm-password">Confirm Password:</label>
                 <input type="password" id="confirm-password" name="confirm-password" required placeholder="Confirm your password">
                 
-                <button type="submit" onclick="location.href='dashboard.html'">Sign Up</button>
+                <button type="submit" onclick="location.href='index.html'">Sign Up</button>
             </form>
             <p>Already have an account? <a href="signin.html">Sign In</a></p>
         </div>
