fix leaderboard responsiveness

--- a/UI/leaderboard.html
+++ b/UI/leaderboard.html
@@ -49,10 +49,10 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td>1</td>
-                        <td>john_doe</td>
-                        <td>Advanced</td>
-                        <td>
+                        <td data-label="Rank">1</td>
+                        <td data-label="Username">john_doe</td>
+                        <td data-label="Level">Advanced</td>
+                        <td data-label="Level Completed">
                             <span class="stars">
                                 <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Plain_Yellow_Star.png"
                                     alt="Star">
@@ -70,26 +70,25 @@
                                     alt="Star">
                                 <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Plain_Yellow_Star.png"
                                     alt="Star">
-
                             </span>
                         </td>
-                        <td>
+                        <td data-label="Badges Earned">
                             <span class="badge">Job Seeker Pro</span>
                             <span class="badge">Interview Ace</span>
                         </td>
-                        <td>
+                        <td data-label="Referred Users">
                             johndoe@example.com<br>
                             janedoe@example.com
                         </td>
-                        <td>Completed all levels, Referred 2 users</td>
-                        <td>10 Visits</td>
+                        <td data-label="Achievements">Completed all levels, Referred 2 users</td>
+                        <td data-label="Profile Visited by Recruiters">10 Visits</td>
                     </tr>
                     <!-- Additional rows for other users -->
                     <tr>
-                        <td>2</td>
-                        <td>jane_doe</td>
-                        <td>Intermediate</td>
-                        <td>
+                        <td data-label="Rank">2</td>
+                        <td data-label="Username">jane_doe</td>
+                        <td data-label="Level">Intermediate</td>
+                        <td data-label="Level Completed">
                             <span class="stars">
                                 <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Plain_Yellow_Star.png"
                                     alt="Star">
@@ -99,12 +98,12 @@
                                     alt="Star">
                             </span>
                         </td>
-                        <td>
+                        <td data-label="Badges Earned">
                             <span class="badge">Interview Pro</span>
                         </td>
-                        <td>janedoe@example.com</td>
-                        <td>Completed Beginner, Referred 1 user</td>
-                        <td>5 Visits</td>
+                        <td data-label="Referred Users">janedoe@example.com</td>
+                        <td data-label="Achievements">Completed Beginner, Referred 1 user</td>
+                        <td data-label="Profile Visited by Recruiters">5 Visits</td>
                     </tr>
                 </tbody>
             </table>
