--- a/UI/index.html
+++ b/UI/index.html
@@ -13,6 +13,9 @@
 
 <body>
 
+    <!-- Add this div for the background image -->
+    <div class="background-image"></div>
+
     <!-- Header / Navigation Bar -->
     <header class="site-header">
         <div class="container">
@@ -37,7 +40,7 @@
 
     <!-- Main Content -->
     <div class="dashboard-container">
-        <section class="welcome-section">
+        <section class="welcome-section colorful-section">
             <h1>Welcome to Guhuza</h1>
             <p>
                 Guhuza is a web-based game that engages users through the job-seeking and hiring process.
@@ -46,7 +49,7 @@
             </p>
         </section>
 
-        <section class="how-to-play">
+        <section class="how-to-play colorful-section">
             <h2>How to Play</h2>
             <p>
                 To start playing, click on the 'Play' button in the navigation bar. You'll be guided through various
@@ -56,7 +59,7 @@
             <button onclick="location.href='play.html'">Play Now</button>
         </section>
 
-        <section class="benefits-of-playing">
+        <section class="benefits-of-playing colorful-section">
             <h2>Benefits of Playing</h2>
             <ul>
                 <li>Improve your job-seeking skills</li>
@@ -64,6 +67,39 @@
                 <li>Win exciting prizes and rewards</li>
             </ul>
             <button onclick="location.href='signup.html'">Register Now</button>
+        </section>
+
+        <section class="skills-development colorful-section">
+            <h2>Skills Development</h2>
+            <p>Enhance your professional skills through interactive challenges and quests. Our game offers:</p>
+            <ul>
+                <li>Technical skill-building exercises</li>
+                <li>Soft skills improvement tasks</li>
+                <li>Industry-specific knowledge quizzes</li>
+            </ul>
+            <button>Start Skill Quest</button>
+        </section>
+
+        <section class="networking colorful-section">
+            <h2>Networking</h2>
+            <p>Expand your professional network in a fun, gamified environment:</p>
+            <ul>
+                <li>Connect with other job seekers</li>
+                <li>Engage with industry professionals</li>
+                <li>Participate in virtual networking events</li>
+            </ul>
+            <button>Join Networking Arena</button>
+        </section>
+
+        <section class="interview-practice colorful-section">
+            <h2>Interview Practice</h2>
+            <p>Prepare for job interviews with our interactive simulations:</p>
+            <ul>
+                <li>AI-powered mock interviews</li>
+                <li>Industry-specific question banks</li>
+                <li>Feedback and improvement tracking</li>
+            </ul>
+            <button>Start Interview Sim</button>
         </section>
     </div>
 
