Updated play.html and play.css to align with index

--- a/UI/play.html
+++ b/UI/play.html
@@ -36,13 +36,13 @@
             <h2>Game Levels Overview</h2>
             <ul>
                 <li><strong>Beginner</strong>
-                    <ul style="background-color: #6fe600 ;">
+                    <ul class="level-list beginner-level">
                         <li>Level 1</li>
                         <li>Level 2</li>
                     </ul>
                 </li>
                 <li><strong>Intermediate</strong>
-                    <ul style="background-color: yellow;">
+                    <ul class="level-list intermediate-level">
                         <li>Level 3</li>
                         <li>Level 4</li>
                         <li>Level 5</li>
@@ -50,7 +50,7 @@
                     </ul>
                 </li>
                 <li><strong>Advanced</strong>
-                    <ul style="background-color: red;">
+                    <ul class="level-list advanced-level">
                         <li>Level 7</li>
                         <li>Level 8</li>
                         <li>Level 9</li>
@@ -59,7 +59,8 @@
                 </li>
             </ul>
         </aside>
-
+    
+    
         <!-- Main Content for Game Levels and Details -->
         <div class="play-main">
             <section class="game-intro">
