--- a/UI/play.html
+++ b/UI/play.html
@@ -35,13 +35,13 @@
         <aside class="level-sidebar">
             <h2>Game Levels Overview</h2>
             <ul>
-                <li><strong>Beginner</strong>
+                <li style="list-style-type: none;"><strong>Beginner</strong>
                     <ul class="level-list beginner-level">
                         <li>Level 1</li>
                         <li>Level 2</li>
                     </ul>
                 </li>
-                <li><strong>Intermediate</strong>
+                <li style="list-style-type: none;"><strong>Intermediate</strong>
                     <ul class="level-list intermediate-level">
                         <li>Level 3</li>
                         <li>Level 4</li>
@@ -49,7 +49,7 @@
                         <li>Level 6</li>
                     </ul>
                 </li>
-                <li><strong>Advanced</strong>
+                <li style="list-style-type: none;"><strong>Advanced</strong>
                     <ul class="level-list advanced-level">
                         <li>Level 7</li>
                         <li>Level 8</li>
