--- a/UI/forgot-password.html
+++ b/UI/forgot-password.html
@@ -43,7 +43,7 @@
 
                 <button type="submit">Send Reset Link</button>
             </form>
-            <p><a href="sign.html">Back to Sign In</a></p>
+            <p><a href="signin.html">Back to Sign In</a></p>
         </div>
     </div>
 
