--- a/leaderboard.html
+++ b/leaderboard.html
@@ -33,7 +33,10 @@
     <!-- Leaderboard Section -->
     <div class="leaderboard-container">
         <section class="leaderboard">
+            <div class="leaderboard-header">
             <h1>Leaderboard</h1>
+            <img src="https://th.bing.com/th/id/OIP.M9dawpFze55GJ2bR84U03QAAAA?rs=1&pid=ImgDetMain" alt="trophy-icon" class="trophy-icon" >
+        </div>
             <table class="leaderboard-table">
                 <thead>
                     <tr>
@@ -50,7 +53,7 @@
                 <tbody>
                     <tr>
                         <td data-label="Rank">1</td>
-                        <td data-label="Username">john_doe</td>
+                        <td data-label="Username">martins456</td>
                         <td data-label="Level">Advanced</td>
                         <td data-label="Level Completed">
                             <span class="stars">
@@ -77,8 +80,8 @@
                             <span class="badge">Interview Ace</span>
                         </td>
                         <td data-label="Referred Users">
-                            johndoe@example.com<br>
-                            janedoe@example.com
+                            gauravarora5@gmail.com<br>
+                            md45678@hotmail.com
                         </td>
                         <td data-label="Achievements">Completed all levels, Referred 2 users</td>
                         <td data-label="Profile Visited by Recruiters">10 Visits</td>
@@ -86,7 +89,7 @@
                     <!-- Additional rows for other users -->
                     <tr>
                         <td data-label="Rank">2</td>
-                        <td data-label="Username">jane_doe</td>
+                        <td data-label="Username">md45678</td>
                         <td data-label="Level">Intermediate</td>
                         <td data-label="Level Completed">
                             <span class="stars">
