--- a/UI/level2.html
+++ b/UI/level2.html
@@ -59,9 +59,10 @@
         <div id="stars" class="stars-container"></div>
         <div id="level-info"></div>
 
-        <!-- Level 3 button (initially hidden) -->
-        <a href="level3.html">
-            <button id="level3-button" style="display:none;">Start Level 3</button>
+        <!-- Level 5 button (initially hidden) -->
+        <a href="level5.html">
+            <button id="level3-button" style="display:none; background-color: #3498db; color: white; border: none;
+            padding: 10px 20px; border-radius: 5px;">Start Level 5</button>
         </a>
     </div>
 
