--- a/UI/index.html
+++ b/UI/index.html
@@ -77,7 +77,7 @@
                 <li>Soft skills improvement tasks</li>
                 <li>Industry-specific knowledge quizzes</li>
             </ul>
-            <button>Start Skill Quest</button>
+            <button onclick="openLevel3Page()">Start Skill Quest</button>
         </section>
 
         <section class="networking colorful-section">
@@ -138,6 +138,11 @@
     </footer>
 
     <script src="js/header.js"></script>
+    <script>
+        function openLevel3Page() {
+            window.location.href = 'level3.html';
+        }
+    </script>
 </body>
 
 </html>
