--- a/UI/level1inter.html
+++ b/UI/level1inter.html
@@ -61,7 +61,8 @@
 
         <!-- Level 2 button (initially hidden) -->
         <a href="level2.html">
-            <button id="level2-button" style="display:none;">Start Level 2</button>
+            <button id="level2-button" style="display:none; background-color: #3498db; color: white; border: none;
+            padding: 10px 20px; border-radius: 5px;">Start Level 4</button>
         </a>
     </div>
 
