--- a/UI/quiz.html
+++ b/UI/quiz.html
@@ -59,10 +59,10 @@
         <div id="stars" class="stars-container"></div>
         <div id="level-info"></div>
 
-        <!-- Level 5 button (initially hidden) -->
-        <a href="level5.html">
-            <button id="level3-button" style="display:none; background-color: #3498db; color: white; border: none;
-            padding: 10px 20px; border-radius: 5px;">Start Level 5</button>
+        <!-- Level 2 button (initially hidden) -->
+        <a href="level2inter.html">
+            <button id="level2-button" style="display:none; background-color: #3498db; color: white; border: none;
+            padding: 10px 20px; border-radius: 5px;">Start Level 2</button>
         </a>
     </div>
 
@@ -103,8 +103,7 @@
     </footer>
 
     <script src="js/header.js"></script>
-    <script src="js/level2.js"></script>
-
+    <script src="js/quiz.js"></script>
 </body>
 
 </html>
