--- a/quiz.html
+++ b/quiz.html
@@ -60,8 +60,9 @@
         <div id="level-info"></div>
 
         <!-- Level 2 button (initially hidden) -->
-        <a href="level2.html">
-            <button id="level2-button" style="display:none;">Start Level 2</button>
+        <a href="level2inter.html">
+            <button id="level2-button" style="display:none; background-color: #3498db; color: white; border: none;
+            padding: 10px 20px; border-radius: 5px;">Start Level 2</button>
         </a>
     </div>
 
