--- a/UI/signin.html
+++ b/UI/signin.html
@@ -37,18 +37,18 @@
         <div class="auth-box">
             <h2>Sign In</h2>
             <form id="sign-in-form" onsubmit="return validateSignIn()" action="">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required placeholder="Enter your username"
-                    minlength="3">
+                <label for="user_email">Email Address:</label>
+                <input type="email" id="user_email" name="user_email" required placeholder="Enter your email address"
+                    required>
 
-                <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required placeholder="Enter your password"
+                <label for="user_password">Password:</label>
+                <input type="password" id="user_password" name="user_password" required placeholder="Enter your password"
                     minlength="8" maxlength="10">
 
                 <button type="submit" onclick="location.href='index.html'">Sign In</button>
             </form>
 
-            <p><a href="forgot-password.html">Forgot Password?</a></p> <!-- Forgot Password link -->
+            <!-- <p><a href="forgot-password.html">Forgot Password?</a></p> Forgot Password link -->
             <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
         </div>
     </div>
