consume quiz api

--- a/UI/quiz.html
+++ b/UI/quiz.html
@@ -60,10 +60,8 @@
         <div id="level-info"></div>
 
         <!-- Level 2 button (initially hidden) -->
-        <a href="level2inter.html">
-            <button id="level2-button" style="display:none; background-color: #3498db; color: white; border: none;
-            padding: 10px 20px; border-radius: 5px;">Start Level 2</button>
-        </a>
+        <button id="level-button" style="display:none; background-color: #3498db; color: white; border: none;
+            padding: 10px 20px; border-radius: 5px; cursor: pointer;"></button>
     </div>
 
     </div>
