--- a/UI/index.html
+++ b/UI/index.html
@@ -32,8 +32,8 @@
                 </ul>
             </nav>
             <div class="auth-buttons">
-                <a href="signin.html" class="btn btn-signin">Sign In</a>
-                <a href="signup.html" class="btn btn-signup">Sign Up</a>
+                <button class="btn btn-signin" id="btn-signin">Sign In</button>
+                <button class="btn btn-signup" id="btn-signup">Sign Up</button>
             </div>
         </div>
     </header>
