--- a/UI/signin.html
+++ b/UI/signin.html
@@ -36,16 +36,16 @@
     <div class="auth-container">
         <div class="auth-box">
             <h2>Sign In</h2>
-            <form id="sign-in-form" onsubmit="return validateSignIn()" action="">
-                <label for="user_email">Email Address:</label>
-                <input type="email" id="user_email" name="user_email" required placeholder="Enter your email address"
-                    required>
+            <form role="form" id="sign-in-form">
+                <label for="email">Email Address:</label>
+                <input type="email" id="email" name="email" required placeholder="Enter your email address" required>
 
-                <label for="user_password">Password:</label>
-                <input type="password" id="user_password" name="user_password" required placeholder="Enter your password"
-                    minlength="8" maxlength="10">
+                <label for="password">Password:</label>
+                <input type="password" id="password" name="password" required placeholder="Enter your password">
+                <p id="error"></p>
+                <p id="success"></p>
 
-                <button type="submit" onclick="location.href='index.html'">Sign In</button>
+                <button type="submit" id="signin-btn">Sign In</button>
             </form>
 
             <!-- <p><a href="forgot-password.html">Forgot Password?</a></p> Forgot Password link -->
@@ -88,6 +88,7 @@
     </footer>
 
     <script src="js/header.js"></script>
+    <script src="js/sign.js"></script>
 </body>
 
 </html>
