--- a/UI/quiz.html
+++ b/UI/quiz.html
@@ -35,6 +35,7 @@
     <div class="quiz-container">
         <!-- Quiz content goes here -->
         <h1>Career Quiz</h1>
+        <div id="timer" class="timer">Time left: 60s</div>
 
         <!-- Question Area -->
         <div class="question" id="question"></div>
