modify leaderboard api

--- a/UI/leaderboard.html
+++ b/UI/leaderboard.html
@@ -37,78 +37,19 @@
             <h1>Leaderboard</h1>
             <img src="https://th.bing.com/th/id/OIP.M9dawpFze55GJ2bR84U03QAAAA?rs=1&pid=ImgDetMain" alt="trophy-icon" class="trophy-icon" >
         </div>
-            <table class="leaderboard-table">
+            <table class="leaderboard-table" id="leaderboard-table">
                 <thead>
                     <tr>
                         <th>Rank</th>
-                        <th>Username</th>
+                        <th>Full Name</th>
+                        <th>Total Point</th>
                         <th>Level</th>
-                        <th>Level Completed</th>
                         <th>Badges Earned</th>
                         <th>Referred Users</th>
                         <th>Achievements</th>
                         <th>Profile Visited by Recruiters</th>
                     </tr>
                 </thead>
-                <tbody>
-                    <tr>
-                        <td data-label="Rank">1</td>
-                        <td data-label="Username">martins456</td>
-                        <td data-label="Level">Advanced</td>
-                        <td data-label="Level Completed">
-                            <span class="stars">
-                                <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Plain_Yellow_Star.png"
-                                    alt="Star">
-                                <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Plain_Yellow_Star.png"
-                                    alt="Star">
-                                <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Plain_Yellow_Star.png"
-                                    alt="Star">
-                                <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Plain_Yellow_Star.png"
-                                    alt="Star">
-                                <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Plain_Yellow_Star.png"
-                                    alt="Star">
-                                <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Plain_Yellow_Star.png"
-                                    alt="Star">
-                                <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Plain_Yellow_Star.png"
-                                    alt="Star">
-                                <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Plain_Yellow_Star.png"
-                                    alt="Star">
-                            </span>
-                        </td>
-                        <td data-label="Badges Earned">
-                            <span class="badge">Job Seeker Pro</span>
-                            <span class="badge">Interview Ace</span>
-                        </td>
-                        <td data-label="Referred Users">
-                            gauravarora5@gmail.com<br>
-                            md45678@hotmail.com
-                        </td>
-                        <td data-label="Achievements">Completed all levels, Referred 2 users</td>
-                        <td data-label="Profile Visited by Recruiters">10 Visits</td>
-                    </tr>
-                    <!-- Additional rows for other users -->
-                    <tr>
-                        <td data-label="Rank">2</td>
-                        <td data-label="Username">md45678</td>
-                        <td data-label="Level">Intermediate</td>
-                        <td data-label="Level Completed">
-                            <span class="stars">
-                                <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Plain_Yellow_Star.png"
-                                    alt="Star">
-                                <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Plain_Yellow_Star.png"
-                                    alt="Star">
-                                <img src="https://upload.wikimedia.org/wikipedia/commons/4/44/Plain_Yellow_Star.png"
-                                    alt="Star">
-                            </span>
-                        </td>
-                        <td data-label="Badges Earned">
-                            <span class="badge">Interview Pro</span>
-                        </td>
-                        <td data-label="Referred Users">janedoe@example.com</td>
-                        <td data-label="Achievements">Completed Beginner, Referred 1 user</td>
-                        <td data-label="Profile Visited by Recruiters">5 Visits</td>
-                    </tr>
-                </tbody>
             </table>
         </section>
 
