--- a/play.html
+++ b/play.html
@@ -118,7 +118,7 @@
                 <p>Earn bonus points by referring Guhuza to a friend. Share your unique referral link and invite them to
                     play.</p>
                     <br>
-                <input type="text" id="referral-link" value="https://guhuza.com/referral?user=YOUR_USERNAME" readonly>
+                <input type="text" id="referral-link" readonly>
                 <button onclick="copyReferral()">Copy Referral Link</button>
 
                 <h3>Share with Friends:</h3>
