--- a/quiz.html
+++ b/quiz.html
@@ -35,6 +35,7 @@
     <div class="quiz-container">
         <!-- Quiz content goes here -->
         <h1>Career Quiz</h1>
+        <div id="timer" class="timer">Time left: 60s</div>
 
         <!-- Question Area -->
         <div class="question" id="question"></div>
@@ -60,10 +61,8 @@
         <div id="level-info"></div>
 
         <!-- Level 2 button (initially hidden) -->
-        <a href="level2inter.html">
-            <button id="level2-button" style="display:none; background-color: #3498db; color: white; border: none;
-            padding: 10px 20px; border-radius: 5px;">Start Level 2</button>
-        </a>
+        <button id="level-button" style="display:none; background-color: #3498db; color: white; border: none;
+            padding: 10px 20px; border-radius: 5px; cursor: pointer;"></button>
     </div>
 
     </div>
