--- a/signin.html
+++ b/signin.html
@@ -36,19 +36,18 @@
     <div class="auth-container">
         <div class="auth-box">
             <h2>Sign In</h2>
-            <form id="sign-in-form" onsubmit="return validateSignIn()" action="">
-                <label for="username">Username:</label>
-                <input type="text" id="username" name="username" required placeholder="Enter your username"
-                    minlength="3">
+            <form role="form" id="sign-in-form">
+                <label for="email">Email Address:</label>
+                <input type="email" id="email" name="email" required placeholder="Enter your email address" required>
 
                 <label for="password">Password:</label>
-                <input type="password" id="password" name="password" required placeholder="Enter your password"
-                    minlength="8" maxlength="10">
+                <input type="password" id="password" name="password" required placeholder="Enter your password">
+                <p id="error"></p>
+                <p id="success"></p>
 
-                <button type="submit" onclick="location.href='index.html'">Sign In</button>
+                <button type="submit" id="signin-btn">Sign In</button>
             </form>
 
-            <p><a href="forgot-password.html">Forgot Password?</a></p> <!-- Forgot Password link -->
             <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
         </div>
     </div>
@@ -88,6 +87,7 @@
     </footer>
 
     <script src="js/header.js"></script>
+    <script src="js/sign.js"></script>
 </body>
 
 </html>
