add loader to sign in button

--- a/UI/signin.html
+++ b/UI/signin.html
@@ -45,6 +45,7 @@
                 <p id="success"></p>
 
                 <button type="submit" id="signin-btn">Sign In</button>
+                <div id="loader" style="display:none;"></div>
             </form>
 
             <p>Don't have an account? <a href="signup.html">Sign Up</a></p>
