--- a/UI/quiz.html
+++ b/UI/quiz.html
@@ -56,8 +56,11 @@
 
         <!-- Next Question Button -->
         <button class="next-question" id="next-question" onclick="loadNextQuestion()">Next Question</button>
-
+        
         <div id="level-info"></div>
+        
+        <!-- Try again Button -->
+        <button class="try-again" id="try-again" onclick="tryAgain()">Try Again</button>
 
         <button id="level-button" style="display:none; background-color: #3498db; color: white; border: none;
             padding: 10px 20px; border-radius: 5px; cursor: pointer;"></button>
