--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 </ul>
             </nav>
             <div class="auth-buttons">
-                <button class="btn btn-signin" id="btn-signin">Sign In</button>
-                <button class="btn btn-signup" id="btn-signup">Sign Up</button>
+                <button class="btn btn-signin" id="signin">Sign In</button>
+                <button class="btn btn-signup" id="signup">Sign Up</button>
             </div>
         </div>
     </header>
