--- a/leaderboard.html
+++ b/leaderboard.html
@@ -46,8 +46,6 @@
                         <th>Level</th>
                         <th>Badges Earned</th>
                         <th>Referred Users</th>
-                        <th>Achievements</th>
-                        <th>Profile Visited by Recruiters</th>
                     </tr>
                 </thead>
             </table>
@@ -58,36 +56,37 @@
             <h2>Badges You Can Earn</h2>
             <div class="badge-list">
                 <div class="badge-item">
-                    <span class="badge">Job Seeker Pro</span>
-                    <p>Awarded for completing all levels of the Beginner tier.</p>
+                    <img src="images/trophy.png" alt="Job Seeker Pro" class="badge-icon">
+                    <p><span class="badge">Job Seeker Pro </span> <br>Awarded for completing all levels of the Quest.</p>
                 </div>
                 <div class="badge-item">
-                    <span class="badge">Interview Ace</span>
-                    <p>Awarded for answering all interview questions correctly in the Intermediate tier.</p>
+                    <img src="images/handshake.png" alt="Interview Ace" class="badge-icon">
+                    <p><span class="badge">Interview Ace</span><br>Awarded for answering all interview questions correctly upto 30 levels.</p>
                 </div>
                 <div class="badge-item">
-                    <span class="badge">Referral Master</span>
-                    <p>Awarded for referring at least 20 friends to the Guhuza platform.</p>
+                    <img src="images/global-connection.png" alt="Referral Master" class="badge-icon">
+                    <p><span class="badge">Referral Master</span><br>Awarded for referring at least 20 friends to the Guhuza platform.</p>
                 </div>
                 <div class="badge-item">
-                    <span class="badge">Expert Recruiter</span>
-                    <p>Earned when your profile is visited by at least 50 recruiters.</p>
+                    <img src="images/talent-search.png" alt="Expert Recruiter" class="badge-icon">
+                    <p><span class="badge">Expert Recruiter</span><br>Earned when your profile is visited by at least 50 recruiters.</p>
                 </div>
                 <div class="badge-item">
-                    <span class="badge">Networking Guru</span>
-                    <p>Awarded for connecting with 10 or more recruiters on the platform. </p>
+                    <img src="images/network.png" alt="Network Guru" class="badge-icon">
+                    <p><span class="badge">Networking Guru</span><br>Awarded for connecting with 10 or more recruiters on the platform. </p>
                 </div>
                 <div class="badge-item">
-                    <span class="badge">Fast Learner</span>
-                    <p>Earned by completing a level with all correct answers in under 2 minutes.</p>
+                    <img src="images/bolt.png" alt="Fast Learner" class="badge-icon">
+                    <p><span class="badge">Fast Learner</span><br>Earned by completing a level with all correct answers in under 30 seconds.</p>
                 </div>
                 <div class="badge-item">
-                    <span class="badge">Social Sharer</span>
-                    <p>Earned by sharing your leaderboard position on social media.</p>
+                    <img src="images/social-media.png" alt="Social Sharer" class="badge-icon">
+                    <p><span class="badge">Social Sharer</span><br>Earned by sharing your leaderboard position on social media.</p>
                 </div>
                 <div class="badge-item">
-                    <span class="badge">Top Recruit</span>
-                    <p>Given to players who achieve the highest score in the Advanced level.</p>
+                    <img src="images/crown.png" alt="Top Recruit" class="badge-icon">
+                    
+                    <p><span class="badge">Top Recruit</span><br>Given to players who achieve the highest score in the Skill Quest.</p>
                 </div>
             </div>
         </section>
