--- a/signup.html
+++ b/signup.html
@@ -8,7 +8,6 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="stylesheet" href="style/footer.css">
     <link rel="stylesheet" href="style/header.css">
-    <script defer src="sign.js"></script> <!-- JavaScript for validation -->
 </head>
 <body>
     <!-- Header / Navigation Bar -->
@@ -87,5 +86,6 @@
     </footer>
 
     <script src="js/header.js"></script>
+    <script src="js/sign.js"></script>
 </body>
 </html>
